big commit with all changes

--- a/portail/client/src/assets/i18n/en.json
+++ b/portail/client/src/assets/i18n/en.json
@@ -66,6 +66,7 @@
     "magosm:telecom_exchange_point":"Excahnge point",
     "magosm:telecom_fibre_connection_point":"Connection point Fibre",
     "magosm:telecom_copper_connection_point":"Connection point Copper",
+    "magosm:vineyards_grapes_polygon": "Vineyards",
 
     "myLayers":"My Layers",
    
