--- a/portail/client/src/assets/i18n/de.json
+++ b/portail/client/src/assets/i18n/de.json
@@ -27,7 +27,7 @@
 "pois":"Sehenswürdigkeit",
 
 "magosm:hospitals_point":"Spitals",
-"magosm:clinics_point":"Klinken",
+"magosm:clinics_point":"Kliniken",
 "magosm:pharmacies_point":"Apotheken",
 "magosm:social_facility_point":"Sozialen Einrichtungen",
 "magosm:police_point":"Polizei",
@@ -61,6 +61,7 @@
 "magosm:telecom_exchange_point":"Angeschlossenen Knoten",
 "magosm:telecom_fibre_connection_point":"Verteilerpunkte Faser",
 "magosm:telecom_copper_connection_point":"Verteilerpunkte Kupfer",
+"magosm:vineyards_grapes_polygon": "Weinberg",
 
 "myLayers":"Meinen Schichten",
 
