adapt addShapefileLayer to have other EPSG

--- a/portail/client/src/assets/i18n/de.json
+++ b/portail/client/src/assets/i18n/de.json
@@ -63,7 +63,7 @@
 "magosm:telecom_copper_connection_point":"Verteilerpunkte Kupfer",
 "magosm:vineyards_grapes_polygon": "Weinberg",
 
-"myLayers":"Meinen Schichten",
+"myLayers":"Meine Layers",
 
 "communes": "Gemeinden",
 "cantons": "Kantone",
