--- a/portail/client/src/assets/i18n/rm.json
+++ b/portail/client/src/assets/i18n/rm.json
@@ -63,7 +63,7 @@
     "magosm:telecom_copper_connection_point": "Substaits da raccord en rame",
     "magosm:vineyards_grapes_polygon": "Viniards",
     
-    "myLayers": "Mes strats",
+    "myLayers": "Mes Layers",
     
     "communes": "Cumünas",
     "cantons": "Chantuns",
