--- a/portail/client/src/assets/i18n/fr.json
+++ b/portail/client/src/assets/i18n/fr.json
@@ -28,41 +28,64 @@
     "pois":"Points d'intérêts",
 
     "magosm:hospitals_point":"Hôpitaux",
+    "geocaturl:hospital":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
     "magosm:clinics_point":"Cliniques",
+    "geocaturl:clinics":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/06d0fe8c-0ec3-43ba-acbf-939869d86713",
     "magosm:pharmacies_point":"Pharmacies",
+    "geocaturl:pharmacies":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/5debe710-a205-4ddf-b998-3ca33da36042",
     "magosm:social_facility_point":"Structures sociales",
+    "geocaturl:social_facility":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/445d3a63-fd84-491f-aa2a-ad1efc39bf8e",
     "magosm:police_point":"Police",
+    "geocaturl:police":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/e61082a5-6917-4826-938d-e79083817859",
     "magosm:shops_point":"Magasins",
+    "geocaturl:shops":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/1c3962ec-fabc-4301-aa52-a8edc81d5163",
     "magosm:schools_point":"Écoles",
+    "geocaturl:schools":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/0bdf8df3-9d13-499e-ab0b-aebf3fd217d9",
 
     "routes":"Routes & Itinéraires",
 
     "magosm:motorways_line":"Autoroutes",
+    "geocaturl:motorways":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/9761dba0-c250-4d8d-bd16-60bfcfce9886",
     "magosm:highways_line":"Réseau routier",
+    "geocaturl:highways":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
     "magosm:highways_line_recently_modified":"Routes modifiées (j-7)",
+    "geocaturl:highways_recently_modified":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
     "magosm:hiking_foot_routes_line":"Itinéraires de randonnée",
+    "geocaturl:hiking_foot_routes":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/572df454-2d88-4cda-baa1-62cf83cd5d24",
     "magosm:bicycle_mtb_routes_line":"Itinéraires cyclables",
+    "geocaturl:bicycle_mtb_routes":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/19459e9e-53fa-4970-af2d-8571920d34ba",
     "magosm:cycleways_line":"Pistes cyclables",
+    "geocaturl:cycleways":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/7c376405-cb03-40c3-8da2-9bce5df58667",
     "magosm:bus_routes_line":"Lignes de bus",
+    "geocaturl:bus_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dbus",
+
+
     "magosm:tram_ltr_routes_line":"Lignes de tramways",
+    "geocaturl:tram_ltr_routes":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/81c0d9e2-4c6b-4643-a743-47e4e6a6d0f6",
     "magosm:subway_routes_line":"Lignes de métro",
+    "geocaturl:subway_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dsubway",
     "magosm:train_routes_line":"Lignes ferroviaires",
+    "geocaturl:train_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dtrain",
     "magosm:railways_line":"Voies ferrées",
+    "geocaturl:railways":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/99734714-d49e-4f38-8e05-e8e4a529fd5a",
 
     "landuse":"Bâti et occupation des sols",
 
     "magosm:buildings_polygon":"Bâtiments",
+    "geocaturl:buildings":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/4153ac4b-d8a9-4df3-a390-e766ed49a5bd",
     "magosm:proposed":"Propositions de constructions",
+    "geocaturl:proposed":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/caa3cd7a-5923-4351-a65c-fd2fed4763b9",
     "magosm:constructions":"Constructions en cours",
+    "geocaturl:constructions":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/0526622f-98e1-480f-a9eb-91aa78ab58ec",
     "magosm:landuses_naturals_polygon":"Occupation des sols",
+    "geocaturl:landuses_naturals":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/urn:isogeo:metadata:uuid:6ffd6759-eddd-4077-87c4-be65f55d754d",
     "magosm:pnr_polygon":"Parcs Naturels Régionaux",
+    "geocaturl:pnr":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/urn:isogeo:metadata:uuid:31d848b5-6900-4e36-85c9-a4f2b4990b16",
 
     "telecom":"Télécom",
 
-    "magosm:telecom_exchange_point":"Noeuds de raccordement",
-    "magosm:telecom_fibre_connection_point":"Points de mutualisation Fibre",
-    "magosm:telecom_copper_connection_point":"Sous-répartiteurs cuivre",
     "magosm:vineyards_grapes_polygon": "Vignoble",
+    "geocaturl:vineyards_grapes":"https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dvineyard",
    
     "myLayers":"Mes Couches",
   
