--- a/portail/client/src/assets/i18n/fr.json
+++ b/portail/client/src/assets/i18n/fr.json
@@ -57,7 +57,7 @@
     "magosm:cycleways_line":"Pistes cyclables",
     "geocaturl:cycleways":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/7c376405-cb03-40c3-8da2-9bce5df58667",
     "magosm:bus_routes_line":"Lignes de bus",
-    "geocaturl:bus_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dbus",
+    "geocaturl:bus_routes":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/f72e7450-202a-4509-9377-fc40bc73af61",
 
 
     "magosm:tram_ltr_routes_line":"Lignes de tramways",
