--- a/portail/client/src/assets/i18n/de.json
+++ b/portail/client/src/assets/i18n/de.json
@@ -25,7 +25,6 @@
 
 
 "pois":"Sehenswürdigkeit",
-"geocaturl:hospital":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
 
 "magosm:hospitals_point":"Spitals",
 "magosm:clinics_point":"Kliniken",
@@ -66,7 +65,7 @@
 
 "myLayers":"Meine Layers",
 
-"geocaturl:hospgerl":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
+"geocaturl:hospital":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
 "geocaturl:clinics":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/06d0fe8c-0ec3-43ba-acbf-939869d86713",
 "geocaturl:pharmacies":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/5debe710-a205-4ddf-b998-3ca33da36042",
 "geocaturl:social_facility":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/445d3a63-fd84-491f-aa2a-ad1efc39bf8e",
@@ -80,7 +79,7 @@
 "geocaturl:hiking_foot_routes":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/572df454-2d88-4cda-baa1-62cf83cd5d24",
 "geocaturl:bicycle_mtb_routes":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/19459e9e-53fa-4970-af2d-8571920d34ba",
 "geocaturl:cycleways":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/7c376405-cb03-40c3-8da2-9bce5df58667",
-"geocaturl:bus_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dbus",
+"geocaturl:bus_routes":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/f72e7450-202a-4509-9377-fc40bc73af61",
 
 
 "geocaturl:tram_ltr_routes":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/81c0d9e2-4c6b-4643-a743-47e4e6a6d0f6",
