ß to ss in german

--- a/portail/client/src/assets/i18n/de.json
+++ b/portail/client/src/assets/i18n/de.json
@@ -26,7 +26,7 @@
 
 "pois":"Sehenswürdigkeit",
 
-"magosm:hospitals_point":"Spitals",
+"magosm:hospitals_point":"Spitäler",
 "magosm:clinics_point":"Kliniken",
 "magosm:pharmacies_point":"Apotheken",
 "magosm:social_facility_point":"Sozialen Einrichtungen",
@@ -37,13 +37,13 @@
 "routes":"Routen und Strecken",
 
 "magosm:motorways_line":"Autobahnen",
-"magosm:highways_line":"Straßennetz",
-"magosm:highways_line_recently_modified":"Straßennetz geändert (t-7)",
+"magosm:highways_line":"Strassennetz",
+"magosm:highways_line_recently_modified":"Strassennetz geändert (t-7)",
 "magosm:hiking_foot_routes_line":"Wanderrouten",
 "magosm:bicycle_mtb_routes_line":"Radrouten",
 "magosm:cycleways_line":"Radwege",
 "magosm:bus_routes_line":"Buslinien",
-"magosm:tram_ltr_routes_line":"Straßenbahnlinien",
+"magosm:tram_ltr_routes_line":"Strassenbahnlinien",
 "magosm:subway_routes_line":"U-Bahnlinien",
 "magosm:train_routes_line":"Bahnlinien",
 "magosm:railways_line":"Eisenbahnen",
@@ -126,7 +126,7 @@
 "change_config.update":"Letzte Aktualisierung",
 "change_config.nochange":"Für diese Anfrage wurde keine Änderung gefunden.",
 "change_config.results":"Ergebnisse wurden gefunden",
-"change_config.size1":"die Größe der Antwort",
+"change_config.size1":"die Grösse der Antwort",
 "change_config.size2":"ist wichtig und die Ergebnisse können schwer angezeigt werden.",
 "change_config.size3":"Sie können zoom in, um den Suchbereich zu reduzieren oder den Datumsbereich zu begrenzen, dann die Suche neu starten oder die Daten weiter laden.",
 "change_config.continue":"weiter",
